2007-10-31  Juanma Barranquero  <lekktu@gmail.com>

	* strokes.el (strokes-alphabetic-lessp): Simplify.  Doc fix.
	(strokes-unload-hook): Remove function and variable.
	(strokes-unload-function): New-style unload function, adapted
	from `strokes-unload-hook'.

	* emacs-lisp/cl.el (cl-cannot-unload): Remove function.
	(cl-unload-hook): Remove variable.
	(cl-unload-function): New-style unload function, adapted
	from `cl-cannot-unload'.

	* emacs-lisp/elp.el (elp-unload-hook): Remove function and variable.
	(elp-unload-function): New-style unload function, adapted
	from `elp-unload-hook'.

2007-10-31  Sean O'Rourke  <sorourke@cs.ucsd.edu>

	* emacs-lisp/find-func.el (find-library): Use library at
	point as default interactive argument.

2007-10-31  Juanma Barranquero  <lekktu@gmail.com>

	* shadowfile.el (shadow-join): Remove.
	(shadow-shadows): Use `mapconcat' instead of `shadow-join'.
	(shadow-initialize): Use `write-file-functions', not `write-file-hooks'.
	(shadowfile-unload-hook): Remove function and variable.
	(shadowfile-unload-function): New-style unload function, adapted
	from `shadowfile-unload-hook'.

2007-10-31  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/mixal-mode.el (mixal-run, mixal-debug): Call mixvm
	only if it is bound.

	* textmodes/reftex.el: Move autoloads for before all uses.
	(reftex-make-overlay, reftex-overlay-put, reftex-move-overlay)
	(reftex-delete-overlay): Move to the top level with the condition
	in the body.

	* progmodes/simula.el: Use when instead of if.

	* iimage.el (iimage-locate-file): Define unconditionally.

	* mail/mailabbrev.el (mail-abbrev-next-line):
	* emulation/vip.el (vip-enlarge-region, vip-line)
	(vip-next-line-at-bol, vip-previous-line)
	(vip-previous-line-at-bol, vip-find-char, vip-put-back, ex-read):
	Wrap with-no-warnings around uses of next-line and previous-line.

	* ediff.el (run-ediff-from-cvs-buffer):
	* ediff-vers.el (cvs-run-ediff-on-file-descriptor):
	Remove function not used by pcl-cvs anymore.